--- a/index.html
+++ b/index.html
@@ -17,5 +17,10 @@
     </head>
     <body>
        <iframe src="https://script.google.com/macros/s/AKfycbyzgb3Kzu9p0PsTzFq7zYmSadlIDAcNUEWi7ayNdL5SP6A-LKYS5KqqnN0FNkRkmutRWw/exec" width="800" height="100%"></iframe>
+        <script>
+            if(performance.navigation.type == 2){
+                location.reload(true);
+            }
+        </script>
     </body>
 </html>
