--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
         margin-right: 12px;
         cursor: pointer;
     }
-    .smaller{
-      font-size:14px;
+    .smaller {
+      color: #606060;
+      font-size: 13.5px;
     }
     input[name="Address"]{
       width:324.8px;
@@ -121,6 +122,11 @@
               </div>
             </div>
             <div id="section1">
+              <div class="whiteRoundedBox">  
+                <p>Name</p>
+                <!-- added the class noOfBottle to check whether user input positive number of phone number -->
+                <input type="text" class="section1InputText" name="Name"> 
+              </div>
               <div class="whiteRoundedBox">  
                   <p>Phone Number (sg)</p>
                   <!-- added the class noOfBottle to check whether user input positive number of phone number -->
@@ -579,14 +585,15 @@
                 const fr = new FileReader();
                 fr.readAsArrayBuffer(file);
                 fr.onload = (f) => {
-                  const url = "https://script.google.com/macros/s/AKfycbySPi4OBNYy9RuxAbCxQeISrvPxwfcnu4jrMnZimF_IGjovNaqYZirkCZcWtm8G4gMQTQ/exec"; 
+                  const url = "https://script.google.com/macros/s/AKfycbzRQbNDQtp6Q0QqrIKSiZPF7h7e9q7kYTc1l8ZksSXkiLXR7SxkCBUiyt2m9VilsYu4Gg/exec"; 
                   const qs = new URLSearchParams({
                     filename: file.name,
                     mimeType: file.type,
                   });
                   fetch(`${url}?${qs}`, {
                     method: "POST",
-                    body: JSON.stringify({'(PayLah!/PayNow) Transaction Ref. No./Google Transaction ID': [...new Int8Array(f.target.result)], 
+                    body: JSON.stringify({'(PayLah!/PayNow) Transaction Ref. No./Google Transaction ID': [...new Int8Array(f.target.result)],
+                                        'Name': $("input[name='Name']").val(), 
                                         'Phone Number (sg)': $("input[name='Phone Number (sg)']").val(), 
                                         'Email Address': $("input[name='Email Address']").val(), 
                                         'No. of Berry Nice': $("input[name='No. of Berry Nice']").val(),
