--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     #intro{
         
         padding-left: 25px;
-        height:110px;
+        height:135px;
     }
 
     .plus, .minus{
@@ -143,6 +143,10 @@
               <div id="intro">
                 <h1>Dancin Grain Order Form</h1>
                 <p>An online local store for Singapore residents</p>
+                <p style="
+    color: #989898;
+    font-size: 16px;
+">$6.90 each, 4 for $25</p>
               </div>
             </div>
             <div id="section1">
