--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
     .minus{
       font-weight:bolder;
     }
+	    label{
+	        display: inline-block;
+   		 margin-bottom: 5px;
+	    }
 
     button{
         background-color: white;
