--- a/index.html
+++ b/index.html
@@ -629,11 +629,26 @@
    
 
     function deleteSet(set){
+      var presetTexts = "";
       separateAndPresetsArray[set.substring(3, set.length)] = 0;
       $('#' + set).remove();
       presetTextArray[set.substring(3, set.length)] = '';
       $('#' + set + 'OrderSummary').remove();
       calculatePricePart2(shipping == 0 ? 0 : 1);
+
+
+
+      for(i=1;i<presetTextArray.length;i++){
+        console.log("#set" + i + "OrderSummary");
+        if(presetTextArray[i] !== undefined){
+
+          presetTexts += presetTextArray[i];
+        }
+      }
+      presetTexts = presetTexts.replace(/<br\/>/g, "\n");
+      presetTexts = presetTexts.replace(/<\/div>/g, "");
+      presetTexts = presetTexts.replace(/<div id="set\d+OrderSummary">/g, "");
+      $("input[name='Presets']").val(presetTexts);
     }
     function addSet(){
       if(setCounter % 26 == 0){
