--- a/index.html
+++ b/index.html
@@ -320,12 +320,12 @@
 
                 <div class="whiteRoundedBox"> 
                     <p>Gift Message (optional)</p>
-                    <textarea id="giftMessage" name="Gift Message (optional)" rows="5" cols="60" maxlength="200" placeholder="Congratulations and best wishes on your grand opening!&#10;&#10;Love, Mary"></textarea>
+                    <textarea id="giftMessage" name="Gift Message (optional)" rows="5" cols="60" maxlength="200" placeholder="Happy Birthday! Here is a care package for you, cheers to better gut health!&#10;&#10;Love, Mary"></textarea>
                 </div>
               </div>
               <div class="whiteRoundedBox"> 
-                <p>Comment/Request (optional)</p>
-                <textarea id="comment" name="Comment/Request (optional)" rows="5" cols="60" maxlength="200"></textarea>
+                <p>Comment/Request (optional, request will be subjected to availability, we will contact you if we have an issue with your request)</p>
+                <textarea id="comment" name="Comment/Request (optional)" rows="5" cols="60" maxlength="200" placeholder="Is it possible for the drinks to be delivered on sunday 3pm?"></textarea>
               </div>
               <p class="totalPrice"></p>
       
