--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
               </div>
               <div class="whiteRoundedBox"> 
                 <p>Comment/Request (optional, request will be subjected to availability, we will contact you if we have an issue with your request)</p>
-                <textarea id="comment" name="Comment/Request (optional)" rows="5" cols="60" maxlength="200" placeholder="Is it possible for the drinks to be delivered on sunday 3pm?"></textarea>
+                <textarea id="comment" name="Comment/Request (optional)" rows="5" cols="60" maxlength="200" placeholder="Is it possible for the drinks to be delivered on this sunday 3pm?"></textarea>
               </div>
               <p class="totalPrice"></p>
       
