--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     #intro{
         
         padding-left: 25px;
-        height:135px;
+        height:175px;
     }
 
     .plus, .minus{
@@ -182,7 +182,7 @@
                 <p style="
     color: #989898;
     font-size: 16px;
-">$6.90 each, 4 for $25</p>
+">$6.90 each, 4 for $25<br><br>Subscribe to enjoy discounts and free delivery! <a href="https://dancin-grain.github.io/subscription/" target="_blank">Click Here!</a></p>
               </div>
             </div>
             <div id="section1">
