--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@
     #intro{
         
         padding-left: 25px;
-        height:175px;
+        padding-right: 25px;
+        height:251px;
     }
 
+    .twentyPcent{
+      font-size: 25px;
+    }
     .plus, .minus{
       vertical-align: bottom;
       box-sizing: border-box;
@@ -180,9 +184,11 @@
                 <h1>Dancin Grain Order Form</h1>
                 <p>An online local store for Singapore residents</p>
                 <p style="
-    color: #989898;
+    color: black;
     font-size: 16px;
-">$6.90 each, 4 for $25<br><br>Subscribe to enjoy discounts and free delivery! <a href="https://dancin-grain.github.io/subscription/" target="_blank">Click Here!</a></p>
+">Disclaimer: $6.90 each, 4 for $25</p><hr style="    margin-top: 30px;
+margin-bottom: 20px;
+border: 1px solid rgb(246, 227, 171);"><p style="margin-top: -5px;">Subscribe to enjoy discounts of up to <b class="twentyPcent"">20%</b> and free delivery! <br/><br/>To subscribe, <a href="https://dancin-grain.github.io/subscription/" target="_blank">click here!</a></p>
               </div>
             </div>
             <div id="section1">
