--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     font-size: 16px;
 ">Disclaimer: $6.90 each, 4 for $25</p><hr style="    margin-top: 30px;
 margin-bottom: 20px;
-border: 1px solid rgb(246, 227, 171);"><p style="margin-top: -5px;">Subscribe to enjoy discounts of up to <b class="twentyPcent"">20%</b> and free delivery! <br/><br/>To subscribe, <a href="https://dancin-grain.github.io/subscription/" target="_blank">click here!</a></p>
+border: 1px solid rgb(246, 227, 171);"><p style="margin-top: -5px;">Subscribe to enjoy discounts of up to <b class="twentyPcent"">20%</b> off and free delivery! <br/><br/>To subscribe, <a href="https://dancin-grain.github.io/subscription/" target="_blank">click here!</a></p>
               </div>
             </div>
             <div id="section1">
@@ -1125,7 +1125,7 @@ border: 1px solid rgb(246, 227, 171);"><p style="margin-top: -5px;">Subscribe to
                 const fr = new FileReader();
                 fr.readAsArrayBuffer(file);
                 fr.onload = (f) => {
-                  const url = "https://script.google.com/macros/s/AKfycbx99bXNAYUjcPm_6UbUSP4j-amAGGXGyasKwygHvdeSfuMtAcQlHovzQRFI-WDJMEUsTg/exec"; 
+                  const url = "https://script.google.com/macros/s/AKfycbx_qMJHVBVtgWYqFimMuL8QW7WFK7NNi17W5sW8bX_NypPyKGE9AVFHnPL54DwhI1X7/exec"; 
                   const qs = new URLSearchParams({
                     filename: file.name,
                     mimeType: file.type,
