--- a/index.html
+++ b/index.html
@@ -151,6 +151,16 @@
     box-sizing: border-box;
     margin-right: calc((800px - 780px)/2);
 }
+
+.plus, .minus{
+  user-select: none;
+
+}
+
+.whiteRoundedBox.drinksStyle.bs {
+    
+    margin-right: 0px;
+  }
      ::-webkit-scrollbar{
                 width:10px;
             }
