--- a/index.html
+++ b/index.html
@@ -493,7 +493,20 @@ border: 1px solid rgb(246, 227, 171);"><p style="margin-top: -5px;">Subscribe to
             </div>
               <div class="whiteRoundedBox"> 
                   <p>(PayLah!/PayNow) Transaction Ref. No./Google Transaction ID</p>
-                  <p>𝐏𝐥𝐞𝐚𝐬𝐞 𝐬𝐞𝐧𝐝 𝐭𝐡𝐞 𝐩𝐚𝐲𝐦𝐞𝐧𝐭 𝐭𝐨 𝟗𝟔𝟏𝟕𝟏𝟏𝟏𝟗 (𝐏𝐚𝐲𝐋𝐚𝐡!/𝐏𝐚𝐲𝐍𝐨𝐰) 𝐚𝐧𝐝 𝐮𝐩𝐥𝐨𝐚𝐝 𝐚 𝐬𝐜𝐫𝐞𝐞𝐧𝐬𝐡𝐨𝐭 𝐨𝐟 𝐭𝐡𝐞 "𝐓𝐫𝐚𝐧𝐬𝐚𝐜𝐭𝐢𝐨𝐧 𝐑𝐞𝐟. 𝐍𝐨./𝐆𝐨𝐨𝐠𝐥𝐞 𝐓𝐫𝐚𝐧𝐬𝐚𝐜𝐭𝐢𝐨𝐧 𝐈𝐃" 𝐡𝐞𝐫𝐞.</p>
+                  <p>𝐏𝐥𝐞𝐚𝐬𝐞 𝐬𝐜𝐚𝐧 𝐭𝐡𝐞 𝐟𝐨𝐥𝐥𝐨𝐰𝐢𝐧𝐠 𝐐𝐑 𝐜𝐨𝐝𝐞 𝐮𝐬𝐢𝐧𝐠 𝐏𝐚𝐲𝐋𝐚𝐡!/𝐏𝐚𝐲𝐍𝐨𝐰 𝐭𝐨 𝐬𝐞𝐧𝐝 𝐭𝐡𝐞 𝐩𝐚𝐲𝐦𝐞𝐧𝐭 𝐭𝐨 𝟗𝟔𝟏𝟕𝟏𝟏𝟏𝟗 𝐚𝐧𝐝 𝐮𝐩𝐥𝐨𝐚𝐝 𝐚 𝐬𝐜𝐫𝐞𝐞𝐧𝐬𝐡𝐨𝐭 𝐨𝐟 𝐭𝐡𝐞 "𝐓𝐫𝐚𝐧𝐬𝐚𝐜𝐭𝐢𝐨𝐧 𝐑𝐞𝐟. 𝐍𝐨./𝐆𝐨𝐨𝐠𝐥𝐞 𝐓𝐫𝐚𝐧𝐬𝐚𝐜𝐭𝐢𝐨𝐧 𝐈𝐃" 𝐡𝐞𝐫𝐞.</p>
+                  <div style="
+    max-height: 330px;
+    overflow: hidden;
+    margin: 0px auto;
+">
+<img id="qrcode" style="
+    /* max-height: 300px; */
+    /* max-width: 50px; */
+    /* overflow: hidden; */
+    display: block;
+    margin: 0px auto;
+">
+</div>
                   <img  src="https://drive.google.com/uc?export=download&id=1LIzSp6inArSpWziktjTNXpSwvyr0tk9b">
                   <p></p>
                   <input type="file" name="(PayLah!/PayNow) Transaction Ref. No./Google Transaction ID" id="myFile">
@@ -1066,7 +1079,19 @@ border: 1px solid rgb(246, 227, 171);"><p style="margin-top: -5px;">Subscribe to
             $('input[name="Unit Number"]').val(''); 
 
         }
+        $('#qrcode').attr("src","https://sgqr.fullstacksys.com/paynow?mobile=96171119&uen=&editable=0&amount=" + $('.totalPrice').html().substring($('.totalPrice').html().indexOf("$") + 1, $('.totalPrice').html().length) + "&expiry=" + dateToYMD(today.setDate(today.getDate() + 1)) + "&ref_id=&company=");
+
+
       })
+
+      function dateToYMD(date) {
+          var d = date.getDate();
+          var m = date.getMonth() + 1; //Month from 0 to 11
+          var y = date.getFullYear();
+          return '' + y + '/' + (m<=9 ? '0' + m : m) + '/' + (d <= 9 ? '0' + d : d) + " 23:59";
+      }
+
+console.log(dateToYMD(new Date(2017,10,5))); // Nov 5
 
       $("#sect2Back").click(function(){
           $("#section1").show();
