--- a/index.html
+++ b/index.html
@@ -1091,7 +1091,7 @@ margin-top: 23px;
         today1 = new Date();
         today1.setDate(today1.getDate() + 1);
         $('#qrcode').attr("src","https://sgqr.fullstacksys.com/paynow?mobile=96171119&uen=&editable=0&amount=" + $('.totalPrice').html().substring($('.totalPrice').html().indexOf("$") + 1, $('.totalPrice').html().length) + "&expiry=" + encodeURIComponent(dateToYMD(today1)) + "&ref_id=&company=");
-        $('#qrcodeText').html('Valid till ' + today1.toLocaleDateString("en-US", options3) + " 23:59")
+        $('#qrcodeText').html('Valid till ' + today1.toLocaleDateString("en-US", options3) + ", 23:59")
 
       })
 
