--- a/index.html
+++ b/index.html
@@ -1091,7 +1091,7 @@ margin-top: 23px;
         today1.setDate(today1.getDate() + 1);
         $('#qrcode').attr("src","https://sgqr.fullstacksys.com/paynow?mobile=96171119&uen=&editable=0&amount=" + $('.totalPrice').html().substring($('.totalPrice').html().indexOf("$") + 1, $('.totalPrice').html().length) + "&expiry=" + encodeURIComponent(dateToYMD(today1)) + "&ref_id=&company=");
         $('#qrcodeText').html('Valid till ' + today1.toLocaleDateString("en-US", options3) + ", 23:59")
-        $('#dynamicImageCutoff').attr("max-height", 330/356 * $("#qrcode").height());
+        $('#dynamicImageCutoff').css("max-height", 330/356 * $("#qrcode").height());
 
       })
 
@@ -1102,7 +1102,7 @@ margin-top: 23px;
           return '' + y + '/' + (m<=9 ? '0' + m : m) + '/' + (d <= 9 ? '0' + d : d) + " 23:59";
       }
       $(window).resize(function(){
-        $('#dynamicImageCutoff').attr("max-height", 330/356 * $("#qrcode").height());
+        $('#dynamicImageCutoff').css("max-height", 330/356 * $("#qrcode").height());
       });
 console.log(dateToYMD(new Date(2017,10,5))); // Nov 5
 
