--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@ border: 1px solid rgb(246, 227, 171);"><p style="margin-top: -5px;">Subscribe to
                 </div>
               </div>
               <div class="whiteRoundedBox"> 
-                <p>Comment/Request (optional, request will be subjected to availability, we will contact you if we have an issue with your request)</p>
+                <p>Comment/Request (optional, request will be subjected to availability, we will respond to you within the day via email.)</p>
                 <textarea id="comment" name="Comment/Request (optional)" rows="5" cols="60" maxlength="200" placeholder="Is it possible for the drinks to be delivered on this sunday 3pm?"></textarea>
               </div>
               <p class="totalPrice"></p>
@@ -476,6 +476,7 @@ border: 1px solid rgb(246, 227, 171);"><p style="margin-top: -5px;">Subscribe to
                   <button id="sect3Back" type="button">Back</button>
                   <button id="sect3Next" type="button">Next</button>
             </div>
+            <p></p>
             <div id="section4" style="display: none;">
               <!-- <input type="hidden" name="entry.1020438313"> -->
             
@@ -493,7 +494,7 @@ border: 1px solid rgb(246, 227, 171);"><p style="margin-top: -5px;">Subscribe to
             </div>
               <div class="whiteRoundedBox"> 
                   <p>(PayLah!/PayNow) Transaction Ref. No./Google Transaction ID</p>
-                  <p>𝟏.𝐒𝐜𝐚𝐧 𝐭𝐡𝐞 𝐟𝐨𝐥𝐥𝐨𝐰𝐢𝐧𝐠 𝐐𝐑 𝐜𝐨𝐝𝐞 𝐮𝐬𝐢𝐧𝐠 𝐏𝐚𝐲𝐋𝐚𝐡!/𝐏𝐚𝐲𝐍𝐨𝐰 𝐭𝐨 𝐬𝐞𝐧𝐝 𝐭𝐡𝐞 𝐩𝐚𝐲𝐦𝐞𝐧𝐭 𝐭𝐨 𝟗𝟔𝟏𝟕𝟏𝟏𝟏𝟗.</p>
+                  <p>𝟏.𝐒𝐜𝐚𝐧 𝐭𝐡𝐞 𝐟𝐨𝐥𝐥𝐨𝐰𝐢𝐧𝐠 𝐐𝐑 𝐜𝐨𝐝𝐞 𝐮𝐬𝐢𝐧𝐠 𝐏𝐚𝐲𝐋𝐚𝐡!/𝐏𝐚𝐲𝐍𝐨𝐰 𝐭𝐨 𝐬𝐞𝐧𝐝 𝐭𝐡𝐞 𝐩𝐚𝐲𝐦𝐞𝐧𝐭 𝐭𝐨 𝟗𝟔𝟏𝟕𝟏𝟏𝟏𝟗 (𝐍𝐨𝐞𝐥𝐞𝐧𝐠).</p>
                   <div id="dynamicImageCutOff"style="
     overflow: hidden;
     margin: 0px auto;
