--- a/index.html
+++ b/index.html
@@ -1092,7 +1092,7 @@ margin-top: 23px;
         today1.setDate(today1.getDate() + 1);
         $('#qrcode').attr("src","https://sgqr.fullstacksys.com/paynow?mobile=96171119&uen=&editable=0&amount=" + $('.totalPrice').html().substring($('.totalPrice').html().indexOf("$") + 1, $('.totalPrice').html().length) + "&expiry=" + encodeURIComponent(dateToYMD(today1)) + "&ref_id=&company=");
         $('#qrcodeText').html('Valid till ' + today1.toLocaleDateString("en-US", options3) + ", 23:59")
-        $('#dynamicImageCutOff').css("max-height", 330/356 * $("#qrcode").height());
+        $('#qrcode').attr("onload",`$('#dynamicImageCutOff').css("max-height", 330/356 * $("#qrcode").height())`);
 
       })
 
@@ -1105,7 +1105,7 @@ margin-top: 23px;
       $(window).resize(function(){
         $('#dynamicImageCutOff').css("max-height", 330/356 * $("#qrcode").height());
       });
-console.log(dateToYMD(new Date(2017,10,5))); // Nov 5
+
 
       $("#sect2Back").click(function(){
           $("#section1").show();
