--- a/index.html
+++ b/index.html
@@ -1091,7 +1091,8 @@ margin-top: 23px;
         today1 = new Date();
         today1.setDate(today1.getDate() + 1);
         //document.getElementById("qrcode").addEventListener("load", function(){alert("hi");});
-        document.getElementById("qrcode").addEventListener("load", function(){$('#dynamicImageCutOff').css("max-height", 330/356 * $("#qrcode").height()); });
+        setInterval(function() {$('#dynamicImageCutOff').css("max-height", 330/356 * $("#qrcode").height()); }, 1000); // not sure why onload function not working, code will put here instead of load event
+        //document.getElementById("qrcode").addEventListener("load", function(){});
         //$('#qrcode').attr("onload",``);
         $('#qrcode').attr("src","https://sgqr.fullstacksys.com/paynow?mobile=96171119&uen=&editable=0&amount=" + $('.totalPrice').html().substring($('.totalPrice').html().indexOf("$") + 1, $('.totalPrice').html().length) + "&expiry=" + encodeURIComponent(dateToYMD(today1)) + "&ref_id=&company=");
         $('#qrcodeText').html('Valid till ' + today1.toLocaleDateString("en-US", options3) + ", 23:59")
