--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ border: 1px solid rgb(246, 227, 171);"><p style="margin-top: -5px;">Subscribe to
           
               --><div class="whiteRoundedBox drinksStyle fb"> 
                   <p>No. of Floral Blend</p>
-                  <img class="productPhoto" style="width:208px;" src="https://drive.google.com/uc?id=1y8hDiCJc0vjkeWB6FzLOz-L1hWK5W_qM">
+                  <img class="productPhoto" style="width:208px;" src="https://drive.google.com/uc?export=download&id=1y8hDiCJc0vjkeWB6FzLOz-L1hWK5W_qM">
                   <input type="number" id="floralBlend" class="noOfBottle" oninput="calculatePricePart1(this.value, 4)" name="No. of Floral Blend" min="0" value="0"><p class="minus" onclick="minus($('#floralBlend'), 4)">-</p><p class="plus" onclick="plus($('#floralBlend'), 4)">+</p> 
               </div><!--
           
