--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@ border: 1px solid rgb(246, 227, 171);"><p style="margin-top: -5px;">Subscribe to
 <p style="
 margin-top: 23px;
 ">𝟐.𝐔𝐩𝐥𝐨𝐚𝐝 𝐚 𝐬𝐜𝐫𝐞𝐞𝐧𝐬𝐡𝐨𝐭 𝐨𝐟 𝐭𝐡𝐞 "𝐓𝐫𝐚𝐧𝐬𝐚𝐜𝐭𝐢𝐨𝐧 𝐑𝐞𝐟. 𝐍𝐨./𝐆𝐨𝐨𝐠𝐥𝐞 𝐓𝐫𝐚𝐧𝐬𝐚𝐜𝐭𝐢𝐨𝐧 𝐈𝐃" 𝐡𝐞𝐫𝐞.</p>  
-                  <img  src="https://drive.google.com/uc?export=download&id=1LIzSp6inArSpWziktjTNXpSwvyr0tk9b">
+                  <img  src="https://www.groovymeowmix.com/images/kefirFlavors/payImageEx.png">
                   <p></p>
                   <input type="file" name="(PayLah!/PayNow) Transaction Ref. No./Google Transaction ID" id="myFile">
               </div>
@@ -1108,7 +1108,7 @@ margin-top: 23px;
         setInterval(function() {$('#dynamicImageCutOff').css("max-height", 330/356 * $("#qrcode").height()); }, 1000); // not sure why onload function not working, code will put here instead of load event
         //document.getElementById("qrcode").addEventListener("load", function(){});
         //$('#qrcode').attr("onload",``);
-        $('#qrcode').attr("src","https://sgqr.fullstacksys.com/paynow?mobile=96171119&uen=&editable=0&amount=" + $('.totalPrice').html().substring($('.totalPrice').html().indexOf("$") + 1, $('.totalPrice').html().length) + "&expiry=" + encodeURIComponent(dateToYMD(today1)) + "&ref_id=&company=");
+        $('#qrcode').attr("src","https://sgqrcode.com/paynow?mobile=96171119&uen=&editable=0&amount=" + $('.totalPrice').html().substring($('.totalPrice').html().indexOf("$") + 1, $('.totalPrice').html().length) + "&expiry=" + encodeURIComponent(dateToYMD(today1)) + "&ref_id=&company="); //"https://sgqr.fullstacksys.com/paynow?mobile=96171119&uen=&editable=0&amount=" + $('.totalPrice').html().substring($('.totalPrice').html().indexOf("$") + 1, $('.totalPrice').html().length) + "&expiry=" + encodeURIComponent(dateToYMD(today1)) + "&ref_id=&company=");
         $('#qrcodeText').html('Valid till ' + today1.toLocaleDateString("en-US", options3) + ", 23:59")
         $(window).resize(function(){
         $('#dynamicImageCutOff').css("max-height", 330/356 * $("#qrcode").height());
