--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@ border: 1px solid rgb(246, 227, 171);"><p style="margin-top: -5px;">Subscribe to
 <p style="
 margin-top: 23px;
 ">𝟐.𝐔𝐩𝐥𝐨𝐚𝐝 𝐚 𝐬𝐜𝐫𝐞𝐞𝐧𝐬𝐡𝐨𝐭 𝐨𝐟 𝐭𝐡𝐞 "𝐓𝐫𝐚𝐧𝐬𝐚𝐜𝐭𝐢𝐨𝐧 𝐑𝐞𝐟. 𝐍𝐨./𝐆𝐨𝐨𝐠𝐥𝐞 𝐓𝐫𝐚𝐧𝐬𝐚𝐜𝐭𝐢𝐨𝐧 𝐈𝐃" 𝐡𝐞𝐫𝐞.</p>  
-                  <img  src="https://www.groovymeowmix.com/images/kefirFlavors/payImageEx.png">
+                  <img  src="https://i.imgur.com/seox2js.png">
                   <p></p>
                   <input type="file" name="(PayLah!/PayNow) Transaction Ref. No./Google Transaction ID" id="myFile">
               </div>
